Wed Jan 14 23:43:00 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp,bcmxcp_usb: Change driver verion to 0.19.

Wed Jan 14 23:35:10 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp.c: Add ups.power value.

Wed Jan 14 21:45:10 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp.c: Changed status info to include OL with BYPASS, BOOST, TRIM.
    Add some more meters like power and current.nominal (max).

Wed Jan 14 22:22:51 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - tools/Makefile.am: fix the name of the "dist-hook" rule, which triggers the
   USB files regeneration upon calling "make dist"

Wed Jan 14 21:59:47 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 * Eaton update:
   - drivers/{mge-shut.c,mge-shut.h,mge-hid.c}, data/driver.list:
     - add more models, like Nova AVR 625 and 1250, and renamed models,
     - if a model name can't be matched, concatenate iProduct and iModel. The
       next step is to only manage exceptions since the above rule is now the
       standard.
     
Wed Jan 14 21:55:47 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 * Rework the NUT Python support tree:
   - scripts/python/module: moved a level up since PyNUT will also provide a
     configuration class in the future,
   - scripts/python/module/PyNUT.py: revert the name from PyNUTClient to PyNUT,
   - scripts/python/module/test_nutclient.py: fix the import name to PyNUT,
   - scripts/python/app: moved a level up,
   - scripts/python/README: some update and completion,
   - scripts/python/Makefile.am: update for the reworked tree,
   - AUTHORS, COPYING, NEWS: update the PyNUT name and fix typo.

Tue Jan  6 13:55:30 UTC 2009 / Charles Lepple <clepple@gmail.com>

 - m4/nut_check_os.m4: change dist_get_flavor to os_get_name.
 - ChangeLog: update year to 2009 for some commits.

Sat Jan  3 00:35:10 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>
